# phasedArrayOptimized

./: .gitignore  AraSim  AraSim.cc  CMakeLists.txt  Detector.cc  Detector.h  LICENSE  M.readTreeBackup  M.simAnalysis  README.md  Report.cc  Report.h  Settings.h  counting.hh  data_test_n.txt  data_test_s_n.txt  data_test_sn.txt  eventSimDict.C  eventSimDict.h  matcreat.cpp  nuphase_matched_trigEffc.txt  readGeom  readGeom.cc  readTree  readTree.cc  readTree.cc~  readTreeBackup  readTreeBackup.cc  readTreeBackup.cc~  result.0.root  result.1.root  setup.txt  setup.txt~  simAnalysis  simAnalysis.cc  skeletonCode  skeletonCode.cc
back/: M.skeletonCode  Report.cc  Report.h  Trigger.cc  skeletonCode.cc
outputs/: result.0.root  result.9.root  sampleWaveForm.root
outputs/plots/: PeakVFile.root
waveforms/: waveformEvent0_0.txt  waveformEvent0_1.txt  waveformEvent11_0.txt  waveformEvent13_1.txt  waveformEvent17_0.txt  waveformEvent18_0.txt  waveformEvent18_1.txt  waveformEvent1_0.txt  waveformEvent1_1.txt  waveformEvent24_0.txt  waveformEvent26_0.txt  waveformEvent26_1.txt  waveformEvent2_0.txt  waveformEvent2_1.txt  waveformEvent32_1.txt  waveformEvent3_0.txt  waveformEvent3_1.txt  waveformEvent46_0.txt  waveformEvent46_1.txt  waveformEvent47_0.txt  waveformEvent4_0.txt  waveformEvent5_0.txt  waveformEvent61_0.txt  waveformEvent63_0.txt  waveformEvent63_1.txt  waveformEvent66_0.txt  waveformEvent66_1.txt  waveformEvent6_0.txt  waveformEvent6_1.txt  waveformEvent7_0.txt  waveformEvent88_0.txt  waveformEvent8_0.txt  waveformEvent9_0.txt
weight_output/: weight_setup.txt
