cmake_minimum_required(VERSION 3.9)
project(trunk)

set(CMAKE_CXX_STANDARD 11)

add_executable(trunk
        include/linkdef.h
        PlotMakers/readTree.cc
        RayTrace_detail/DoTraceImplementation.h
        RayTrace_detail/RayTraceImplementation.h
        AraSim.cc
        Constants.h
        counting.cc
        counting.hh
        Detector.cc
        Detector.h
        EarthModel.cc
        EarthModel.h
        Efficiencies.cc
        Efficiencies.h
        Event.cc
        Event.h
        eventSimDict.C
        eventSimDict.h
        getSatStudy.cc
        IceModel.cc
        IceModel.h
        LinkDef.h
        matcreat.cpp
        Position.cc
        Position.h
        Primaries.cc
        Primaries.h
        Ray.cc
        Ray.h
        ray_solver.cpp
        RaySolver.cc
        RaySolver.h
        RayTrace.cc
        RayTrace.h
        RayTrace_IceModels.cc
        RayTrace_IceModels.h
        readGeom.cc
        readTree.cc
        readTreeBackup.cc
        Report.cc
        Report.h
        secondaries.cc
        secondaries.hh
        Settings.cc
        Settings.h
        signal.cc
        signal.hh
        Spectra.cc
        Spectra.h
        Tools.cc
        Tools.h
        Trigger.cc
        Trigger.h
        useRaySolver.cc
        Vector.cc
        Vector.h)
